--- a/demomodule/build.gradle
+++ b/demomodule/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin:'kotlin-kapt'
+
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 26
@@ -11,6 +14,7 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -23,20 +27,75 @@ android {
         }
     }
 
+    dataBinding {
+        enabled = true
+    }
+    kapt{
+        generateStubs = true
+    }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
+
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    def supportLib = "27.1.1"
+    def gsonVersion="2.8.2"
+    def groupPieVersion = "2.0.3"
+    def dagger2Version = "2.14.1"
+    def rxAndroidVersion = "2.0.1"
+    def rxJavaVersion = "2.1.9"
+    def retrofitAdapter = "2.2.0"
+    def googleMapVersion = "15.0.1"
+    def okhttpVersion = "3.6.0"
+    def retrofitVersion = "2.3.0"
+    def stethoVersion = "1.5.0"
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.android.support:appcompat-v7:$supportLib"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+
+
+    implementation "com.google.code.gson:gson:$gsonVersion"
+    implementation "com.android.support:recyclerview-v7:$supportLib"
+    implementation "com.android.support:design:$supportLib"
+    implementation "com.android.support:cardview-v7:$supportLib"
+    implementation "com.xwray:groupie:$groupPieVersion"
+    implementation "com.xwray:groupie-kotlin-android-extensions:$groupPieVersion"
+    kapt "com.google.dagger:dagger-compiler:$dagger2Version"
+    implementation "com.google.dagger:dagger:$dagger2Version"
+    implementation "com.google.dagger:dagger-android:$dagger2Version"
+    implementation "com.google.dagger:dagger-android-support:$dagger2Version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger2Version"
+
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitAdapter"
+
+    implementation "com.squareup.okhttp3:okhttp:$okhttpVersion"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
+
+    implementation "com.google.android.gms:play-services-maps:$googleMapVersion"
+    implementation "com.google.android.gms:play-services-location:$googleMapVersion"
+
+    implementation "com.facebook.stetho:stetho:$stethoVersion"
+    implementation "com.facebook.stetho:stetho-okhttp3:$stethoVersion"
+
+    implementation "com.google.android.gms:play-services-maps:$googleMapVersion"
+
+//        kapt "com.android.databinding:compiler:3.1.0"
+
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 repositories {
     mavenCentral()
 }
-
-apply plugin: 'kotlin-android-extensions'
