--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 
 dependencies {
     def supportLib = "27.1.1"
+    def roomVersion = "1.1.0"
 
     implementation project(':demomodule')
 
@@ -50,7 +51,9 @@ dependencies {
 //    kapt "com.android.databinding:compiler:3.1.0"
 //
 //    implementation "com.android.support:recyclerview-v7:$supportLib"
-
+    implementation "android.arch.persistence.room:runtime:$roomVersion"
+    kapt "android.arch.persistence.room:compiler:$roomVersion"
+    implementation "android.arch.persistence.room:rxjava2:$roomVersion"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
