--- a/demomodule/build.gradle
+++ b/demomodule/build.gradle
@@ -30,9 +30,6 @@ android {
     dataBinding {
         enabled = true
     }
-    kapt{
-        generateStubs = true
-    }
     compileOptions {
         targetCompatibility 1.8
         sourceCompatibility 1.8
@@ -52,6 +49,7 @@ dependencies {
     def okhttpVersion = "3.6.0"
     def retrofitVersion = "2.3.0"
     def stethoVersion = "1.5.0"
+    def roomVersion = "1.1.0"
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -89,8 +87,9 @@ dependencies {
 
     implementation "com.google.android.gms:play-services-maps:$googleMapVersion"
 
-//        kapt "com.android.databinding:compiler:3.1.0"
-
+    implementation "android.arch.persistence.room:runtime:$roomVersion"
+    kapt "android.arch.persistence.room:compiler:$roomVersion"
+    implementation "android.arch.persistence.room:rxjava2:$roomVersion"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
