--- a/demomodule/src/main/AndroidManifest.xml
+++ b/demomodule/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
-        android:theme="@style/AppTheme"
-        android:name=".DemoApplication">
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
